[SC-185] Sortowanie po kolumnach (#113)
* [SC-185] sorting mechanism for ranking table

* [SC-185] fixing bugs after merging

* [SC-185] add ranking position to list after sorting

* [SC-185] add student position in ranking

* [SC-185] Changed adding ranking position

Co-authored-by: barto14753 <wlodarski_bartosz@o2.pl>